Ultimo reporte entregado

--- a/reprote0.2/1introduccion.tex
+++ b/reprote0.2/1introduccion.tex
@@ -21,7 +21,7 @@
 %---------------------------------------------------------
 \section{Organización del contenido}
 
-	En el capítulo \ref{cap:reqUsr} se modela el alcance del sistema. Se presentan inicialmente los Actores involucrados y sus requerimientos. Después se presentan los requerimientos funcionales se presenta el modelo Físico y Lógico del sistema.
+	En el capítulo \ref{cap:reqUsr} se modela el alcance del sistema. Se presentan inicialmente los Actores involucrados y sus requerimientos. Después se presentan los requerimientos funcionales, se presenta el modelo Físico y Lógico del sistema.
 	
 	En el capítulo \ref{cap:reqSist} se modela la {\em Arquitectura del negocio} la cual está conformada por los ({\em Términos} y {\em Hechos del negocio}), Arquitectura de procesos y las {\em Reglas del negocio}. Primero se especifica brevemente el {\em Contexto} en el que los términos tienen significado.
 	
