--- a/reprote0.2/2ModeloDelAlcance.tex
+++ b/reprote0.2/2ModeloDelAlcance.tex
@@ -85,7 +85,6 @@
 	\begin{itemize}
 		\item Genera citas para los clientes cuando entren como invitados.
 		\item Agrega datos de los clientes.
-		\item 
 	\end{itemize}
 	
 	\item[Perfil:] \cdtEmpty
@@ -142,7 +141,7 @@
 		\FRitem{RU4}{Registro de sucursal}{El usuario requiere llevar un registro actualizado de todas las sucursales que haya en la franquicia.}{1}{\PLAN}
 		
 		\FRitem{RU5}{Planeación de personal}{El usuario requiere llevar un registro de los roles que tiene cada empleado de la sucursal.}{1}{\PLAN}
-		\FRitem{RU6}{Visualización de infromación}{El usuario requiere ver la información almacenada la información desplegando pantallas.}{1}{\PLAN}
+		\FRitem{RU6}{Visualización de infromación}{El usuario requiere ver la información almacenada desplegando pantallas.}{1}{\PLAN}
 		\FRitem{RU7}{Registro de pago}{El usuario requiere ver la información de los clientes que realizan su pago.}{1}{\PLAN}
 		\FRitem{RU8}{Aviso de pago}{El usuario requiere informar al cliente de su próximo pago.}{1}{\PLAN}
 		\FRitem{RU9}{Registro de ingreso}{El usuario requiere ver la información de quién ingresa a la sucursal.}{1}{\PLAN}
